Use getFirst()